<resources>
    <string name="app_name">Fortnite SoundBoard</string>

    <string name="Tab1_Gameplay">Gameplay</string>
    <string name="Tab2_Dance">Dance</string>

    <string name="string_share">Share</string>
    <string name="string_suggest_sound">Suggest Sound</string>
    <string name="string_thanks">Thanks for trying our app!</string>
    <string name="string_random">Random sound</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_danke">Danke</string>
    <string name="string_the_worm">The worm</string>
    <string name="string_the_robot">The robot</string>
    <string name="string_take_the_l">Take the L</string>
    <string name="string_slow_clap">Slow clap</string>
    <string name="string_ride_the_pony">Ride the pony</string>
    <string name="string_fresh">Fresh</string>
    <string name="string_floss">Floss</string>
    <string name="string_shuffle">Shuffle</string>
    <string name="string_flapper">Flapper</string>
    <string name="string_dance_move_3">Dance move 3</string>
    <string name="string_dance_move_2">Dance move 2</string>
    <string name="string_dance_moves">dance moves</string>
    <string name="string_best_mates">Best mates</string>
    <string name="string_bouncing_on_tires">Bouncing in tires</string>
    <string name="string_bus">Bus</string>
    <string name="string_chest_opened">chest opened</string>
    <string name="string_chest_unopened">chest unopened</string>
    <string name="string_chug_jug">Chug jug</string>
    <string name="string_close_glider">Close Glider</string>
    <string name="string_goal">Goal</string>
    <string name="string_incoming_storm">Incoming storm</string>
    <string name="string_inside_the_storm">Inside the storm</string>
    <string name="string_jump_out_the_bus">Jump out the bus</string>
    <string name="string_launchpad">Launchpad</string>
    <string name="string_open_glider">Open glider</string>
    <string name="string_out_of_the_storm">Out of the storm</string>
    <string name="string_theme_song">Theme song</string>
    <string name="string_assault_rifle_burst">Assault rifle burst</string>
    <string name="string_electrical_trap">Electrical trap</string>
    <string name="string_grenade">Grenade</string>
    <string name="string_grenade_launcher">Grenade launcher</string>
    <string name="string_m16">M16</string>
    <string name="string_rocket_launcher">Rocket Launcher</string>
    <string name="string_pickaxe_attack">Pickaxe attack</string>
    <string name="string_picking_guns">Picking guns</string>
    <string name="string_pistol">Pistol</string>
    <string name="string_pumpkin_rocket_launcher">Pumpkin rocket launcher</string>
    <string name="string_scar">Scar</string>
    <string name="string_shotgun">Shotgun</string>
    <string name="string_silenced_smg">Silenced smg</string>
    <string name="string_smoke_grenade">Smoke grenade</string>
    <string name="string_sniper_shot">Sniper shot</string>
    <string name="string_switch_weapons">Switch weapons</string>
</resources>
